# rattler-build-cache-test

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/: calculator.hpp
lib/src/: calculator.cpp
python/: CMakeLists.txt  bindings.cpp
recipe/: recipe.yaml  variants.yaml
